--- a/src/java-gradle-service/build.gradle
+++ b/src/java-gradle-service/build.gradle
@@ -1,13 +1,16 @@
 plugins {
+    id 'java'
     id 'application'
 }
 
-group = 'com.example'
-version = '1.0'
+repositories {
+    mavenCentral()
+}
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+dependencies {
+    testImplementation 'junit:junit:4.13.2'
+}
 
 application {
-    mainClass = 'com.example.App'
+    mainClassName = 'com.example.App'  // ← matches your App.java
 }
